# oop_labs_2

./: CMakeLists.txt  four.cpp  four.h  main.cpp
test/: tests.cpp
